# akasaka

./: README.md  db.sqlite3  main.py  manage.py  pizza_party.py  pyproject.toml
akasaka/: asgi.py  settings.py  urls.py  wsgi.py
docker/: README.md  docker-compose.yml  init.sql
fs_viewer/: apps.py  forms.py  singleton.py  views.py
home/: apps.py  singleton.py  views.py
sec/: models.py  query.py
templates/: base.html  news.html  news2.html  statement_view.html
