[project]
name = "akasaka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "psycopg>=3.2.7",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "akasaka.settings"
